# brewing-skills

./: LICENSE
.claude/skills/brew-ingredients-db/: .gitignore  SKILL.md
.claude/skills/brew-ingredients-db/scripts/: RESOURCES.md  brewing_ingredients.db  pyproject.toml  web_viewer.py
.claude/skills/brew-ingredients-db/scripts/brew_ingredients/: __init__.py  cli.py  database.py  models.py
.claude/skills/brew-shops-browser/: SKILL.md
.claude/skills/brew-shops-browser/scripts/: pyproject.toml
.claude/skills/brew-shops-browser/scripts/brew_shops/: __init__.py  __main__.py  base.py  tests.py
.claude/skills/brew-shops-browser/scripts/brew_shops/shops/: __init__.py  browamator.py  browarbiz.py  homebeer.py  homebrewing.py  swiatslodu.py
