[project]
name = "brew-shops"
version = "0.1.0"
description = "Parse Polish homebrew shop websites for brewing ingredients"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "markdownify>=0.11.0",
    "html2text>=2020.1.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brew_shops"]
